# Keigen

./: .gitignore  .gitmodules  LICENSE  README.md  README_TEMPLATE.md  build.gradle  settings.gradle
keigen/: CMakeLists.txt  build.gradle
keigen/src/androidTest/java/com/paramsen/keigen/: FloatMatrixTest.kt  MatrixTest.kt
keigen/src/main/java/com/paramsen/keigen/: FloatMatrix.kt  KeigenNativeBridge.kt  KeigenNativeBridgeFloat.kt  KeigenNativeBridgeShared.kt  Matrix.kt
keigen/src/main/native/: CMakeLists.txt  FloatMatrix.cpp  Shared.cpp  TemplateMatrix.h  eigen.cpp
sample/: build.gradle
sample/prod/release/: output.json
sample/release/: output.json
sample/src/main/: AndroidManifest.xml
sample/src/main/java/com/paramsen/keigen/sample/view/: MainActivity.kt
sample/src/main/res/layout/: activity_main.xml  view_info.xml
sample/src/main/res/values/: strings.xml
tester/: build.gradle
tester/src/main/: AndroidManifest.xml
tester/src/main/java/com/paramsen/keigen/tester/: MainActivity.java
tester/src/main/res/layout/: activity_main.xml
